# leadscraper

./: .gitignore  BANCO_DE_DADOS.md  FRONTEND.md  FRONTEND_DESIGN.md  PROJETO.md  README.md  arquivos_tamanho.csv  build-sidecar.bat  index.html  install.bat  license.txt  main.py  package-lock.json  package.json  roda.bat  scraper-sidecar.spec
backend/adapters/: browser_factory.py  playwright_browser.py  selenium_browser.py
backend/api/: app.py  schemas.py
backend/core/: logging.py  runtime.py
backend/domain/: models.py  scoring.py  whatsapp.py
backend/ports/: browser.py
backend/repositories/: database.py
backend/scrapers/: google_maps.py
backend/services/: export_service.py  job_store.py  refresh_service.py  scrape_service.py
src/: App.tsx  api.ts  store.ts  styles.css  version.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: HistoryPanel.tsx  Layout.tsx  LeadsTable.tsx  PastProspectionsPage.tsx  SearchPanel.tsx  SelectedLeadsPage.tsx  StatsRow.tsx  StatusBar.tsx
src/utils/: initials.ts
