[package]
name = "lead-scraper"
version = "0.2.0"
description = "Lead Scraper Desktop"
authors = ["Adapti JE"]
edition = "2021"

[lib]
name = "lead_scraper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
